--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "url": "git@github.com:epfl-idevelop/elements.git"
   },
   "scripts": {
-    "start": "toolbox serve",
-    "build": "toolbox build",
-    "deploy": "toolbox build styleguide && toolbox deploy",
+    "start": ": toolbox serve",
+    "build": ": toolbox build",
+    "deploy": ": toolbox build styleguide && : toolbox deploy",
     "test": "backstop test",
     "test:reference": "backstop reference",
     "test:approve": "backstop approve",
@@ -102,8 +102,7 @@
     "pickadate": "^3.5.6",
     "selectize.js": "^0.12.12",
     "stylelint-scss": "^3.1.3",
-    "tablesaw": "^3.0.9",
-    "toolbox-utils": "^1.2.0"
+    "tablesaw": "^3.0.9"
   },
   "devDependencies": {
     "backstopjs": "^3.5.2",
