--- a/package.json
+++ b/package.json
@@ -101,11 +101,11 @@
     "object-fit-images": "^3.2.3",
     "pickadate": "^3.5.6",
     "selectize.js": "^0.12.12",
-    "stylelint-scss": "^3.1.3",
     "tablesaw": "^3.0.9"
   },
   "devDependencies": {
     "backstopjs": "^3.5.2",
-    "stylelint-config-recommended-scss": "^3.2.0"
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.1.3"
   }
 }
