Fix gallery nav being unresponsive the first time loaded

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epfl-elements",
-  "version": "2.21.0",
+  "version": "2.21.1c",
   "license": "MIT",
   "main": "index.html",
   "repository": {
